# simulated_annealing

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
data/targets/minimal_spanning_tree/: BestSummary.txt
data/targets/minimal_spanning_tree/1000_100/: 1.txt
data/targets/minimal_spanning_tree/1000_100_5x5/: 1.txt
data/targets/minimal_spanning_tree/100_50/: 1.txt
data/targets/minimal_spanning_tree/100_50_5x5/: 1.txt
data/targets/minimal_spanning_tree/10_2/: 1.txt
data/targets/minimal_spanning_tree/10_2_5x5/: 1.txt
data/targets/minimal_spanning_tree/200_100/: 1.txt
data/targets/minimal_spanning_tree/200_100_5x5/: 1.txt
data/targets/minimal_spanning_tree/20_5/: 1.txt
data/targets/minimal_spanning_tree/20_5_5x5/: 1.txt
data/targets/minimal_spanning_tree/500_100/: 1.txt
data/targets/minimal_spanning_tree/500_100_5x5/: 1.txt
data/targets/minimal_spanning_tree/50_10/: 1.txt
data/targets/minimal_spanning_tree/50_10_5x5/: 1.txt
data/targets/minimal_spanning_tree/5_1/: 1.txt
data/targets/minimal_spanning_tree/5_1_5x5/: 1.txt
data/targets/salesman/: BestSummary.txt
data/targets/salesman/1000_100/: 1.txt
data/targets/salesman/1000_100_5x5/: 1.txt
data/targets/salesman/1000_100_circle/: 1.txt
data/targets/salesman/1000_100_ring/: 1.txt
data/targets/salesman/100_50/: 1.txt
data/targets/salesman/100_50_5x5/: 1.txt
data/targets/salesman/10_2/: 1.txt
data/targets/salesman/10_2_5x5/: 1.txt
data/targets/salesman/200_100/: 1.txt
data/targets/salesman/200_100_5x5/: 1.txt
data/targets/salesman/20_5/: 1.txt
data/targets/salesman/20_5_5x5/: 1.txt
data/targets/salesman/500_100/: 1.txt
data/targets/salesman/500_100_5x5/: 1.txt
data/targets/salesman/50_10/: 1.txt
data/targets/salesman/50_10_5x5/: 1.txt
data/targets/salesman/5_1/: 1.txt
data/targets/salesman/5_1_5x5/: 1.txt
data/targets/salesman_angle/: BestSummary.txt
data/targets/salesman_angle/1000_100/: 1.txt
data/targets/salesman_angle/1000_100_5x5/: 1.txt
data/targets/salesman_angle/1000_100_circle/: 1.txt
data/targets/salesman_angle/1000_100_ring/: 1.txt
data/targets/salesman_angle/100_50/: 1.txt
data/targets/salesman_angle/100_50_5x5/: 1.txt
data/targets/salesman_angle/10_2/: 1.txt
data/targets/salesman_angle/10_2_5x5/: 1.txt
data/targets/salesman_area_max/: BestSummary.txt
source/: CMakeLists.txt
source/ext/: CMakeLists.txt
source/ext/add_avx_flags/: add_avx_flags.cmake
source/ext/bs/: CMakeLists.txt
source/ext/check_avx/: check_avx.cmake
source/ext/googletest/: CMakeLists.txt
source/ext/googletest/googletest-release-1.12.1/: CMakeLists.txt
source/ext/googletest/googletest-release-1.12.1/googlemock/: CMakeLists.txt
source/ext/imgui/: CMakeLists.txt
source/ext/implot/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/core/: CMakeLists.txt
source/lib/core/include/core/: CircularBuffer.h  IGenerator.h  IMove.h  IPosition.h  Io.h  Memory.h  MoveCandidate.h  Random.h  Rounding.h  Statistics.h  paths.h  sa.h
source/lib/core/source/: CircularBuffer.cpp  IGenerator.cpp  IMove.cpp  IPosition.cpp  Io.cpp  Memory.cpp  MoveCandidate.cpp  Random.cpp  Rounding.cpp  Statistics.cpp  paths.cpp  sa.cpp
source/lib/io/: CMakeLists.txt
source/lib/io/include/io/: DirectoryIterator.h  Io.h
source/lib/io/source/: DirectoryIterator.cpp  Io.cpp
source/lib/monitor/: CMakeLists.txt
source/lib/monitor/include/monitor/: Monitor.h
source/lib/monitor/source/: Monitor.cpp
source/lib/policies/: CMakeLists.txt
source/lib/policies/include/policies/: Acceptance.h  Cooling.h  IResourcePolicy.h  MoveSelector.h  Resource.h  iteration_policy.h
source/lib/policies/source/: Acceptance.cpp  Cooling.cpp  IterationPolicy.cpp  MoveSelector.cpp  Resource.cpp  iteration_policy.cpp
source/lib/sa/: CMakeLists.txt
source/lib/sa/include/core/: IPosition.h  sa.h
source/lib/sa/include/sa/: IMove.h  IPosition.h  MoveCandidate.h  SA.h  SAFactory.h  sa.h
source/lib/sa/source/: MoveCandidate.cpp  SA.cpp  SAFactory.cpp  sa.cpp
source/lib/serializator/: CMakeLists.txt
source/lib/serializator/include/serializator/: Serializator.h
source/lib/serializator/source/: Serializator.cpp
source/lib/targets/: CMakeLists.txt  Targets.h
source/lib/targets/salesman/: CMakeLists.txt
source/lib/targets/salesman/include/salesman/: Generator.h  Move.h  Position.h  Tester.h
source/lib/targets/salesman/source/: Generator.cpp  Move.cpp  Position.cpp
source/lib/targets/salesman_angle/: CMakeLists.txt
source/lib/targets/salesman_angle/include/salesman_angle/: Generator.h  Move.h  Position.h
source/lib/targets/salesman_angle/source/: Move.cpp  Position.cpp
source/lib/targets/salesman_area_max/: CMakeLists.txt
source/lib/targets/salesman_area_max/include/salesman_area_max/: Generator.h  Move.h  Position.h
source/lib/targets/salesman_area_max/source/: Generator.cpp  Move.cpp  Position.cpp
source/lib/tester/: CMakeLists.txt
source/lib/tester/include/tester/: ITester.h
source/lib/tester/source/: ITester.cpp
source/scripts/: build.sh  test.sh
source/scripts/test/: load_dummy_data.sh
source/scripts/utils/: mem_check.sh  profile.sh
source/targets/: CMakeLists.txt  Targets.h
source/targets/minimal_spanning_tree/: CMakeLists.txt
source/targets/minimal_spanning_tree/include/minimal_spanning_tree/: Generator.h  LinkCutTree.h  Move.h  Position.h  Tree.h
source/targets/minimal_spanning_tree/source/: Generator.cpp  Move.cpp  Position.cpp
source/targets/salesman/: CMakeLists.txt  main.cpp  salesman_move.h  salesman_position.cpp  salesman_position.h  tester.h
source/targets/salesman/include/salesman/: Move.h  Position.h
source/targets/salesman/source/: Generator.cpp  Position.cpp
source/targets/salesman_angle/include/salesman_angle/: Position.h
source/targets/salesman_angle/source/: Generator.cpp  Position.cpp
source/tests/: CMakeLists.txt
source/tests/io/: CMakeLists.txt  TestIo.cpp
source/tests/sa/: CMakeLists.txt  TestSa.cpp
source/tests/targets/salesman/: CMakeLists.txt  TestSalesman.cpp
(+97 files in other folders)
