cmake_minimum_required(VERSION 3.15)
project(simulated_annealing)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
add_compile_options(-Wall -Wextra -pedantic -Wcast-qual -Wshadow -mavx2)
if(NOT CMAKE_BUILD_TYPE STREQUAL "release")
    add_compile_options(-g)
endif()
enable_testing()
add_subdirectory(source)
