cmake_minimum_required(VERSION 3.15)
project(simulated_annealing)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
if (CMAKE_CXX_COMPILER STREQUAL "clang++")
add_compile_options(-stdlib=libc++)
add_link_options(-stdlib=libc++)
endif()
add_compile_options(-Wall -Wextra -pedantic -Wcast-qual -Wshadow -mavx2)
if(NOT CMAKE_BUILD_TYPE STREQUAL "release")
    add_compile_options(-g)
endif()
include(CheckIPOSupported)
check_ipo_supported(RESULT lto_supported OUTPUT lto_output)
if (lto_supported)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
else()
    message(WARNING "LTO/IPO not supported: ${lto_output}")
endif()

enable_testing()
add_subdirectory(source)
