add_library(targets INTERFACE)
file(GLOB SUBTARGETS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(subdir ${SUBTARGETS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
        add_subdirectory(${subdir})
        target_link_libraries(targets INTERFACE ${subdir})
    endif()
endforeach()
target_include_directories(targets INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})